#########################
### PROJECT DEPENDENCIES
###########
[project]
dependencies = [
    "tensorflow",
    "matplotlib",
    "opencv-python",
]

name = "ImageClassification_NN"
version = "1.0"
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
